--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,9 @@
   <meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate" />
   <meta http-equiv="pragma" content="no-cache" />
   <meta http-equiv="expires" content="0" />
-  <link rel="icon" type="image/png" href="./assets/img/datanimbus-author-mini.svg" sizes="16x16">
-  <link rel="icon" type="image/png" href="./assets/img/datanimbus-author-mini.svg" sizes="32x32">
-  <link rel="icon" type="image/png" href="./assets/img/datanimbus-author-mini.svg" sizes="64x64">
+  <link rel="icon" type="image/png" href="./favicon_16x16.png" sizes="16x16">
+  <link rel="icon" type="image/png" href="./favicon_32x32.png" sizes="32x32">
+  <link rel="icon" type="image/x-icon" href="./favicon.ico" sizes="64x64">
 </head>
 
 <body class="d-flex flex-column w-100 h-100" style="margin: 0;overflow: hidden;">
